this website responsive navbar added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legal solution</title>
+    <!-- ====== fontawsome cdn ====== -->
+    <script src="https://kit.fontawesome.com/52d4052aca.js" crossorigin="anonymous"></script>
     <!-- ====== tailwind and daisyui cdn ====== -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.22/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -15,7 +17,9 @@
           theme: {
             extend: {
               colors: {
-                clifford: '#da373d',
+                "btn-primary-color": '#B68C5A',
+                "primary-text-color": '#414040',
+                "secondary-text-color": '#707070',
               }
             }
           }
@@ -23,6 +27,44 @@
     </script>
 </head>
 <body>
-    
+    <!-- ====== header section start ====== -->
+    <header>
+      <!-- ====== nav bar start ====== -->
+      <nav>
+        <div class="container mx-auto">
+          <div class="navbar">
+            <div class="navbar-start">
+              <div class="dropdown">
+                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
+                </div>
+                <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-base text-primary-text-color">
+                  <li><a>Home</a></li>
+                  <li><a>Services<i class="fa-solid fa-angle-right"></i></a></li>
+                  <li><a>Cases<i class="fa-solid fa-angle-right"></i></a></li>
+                  <li><a>Blog<i class="fa-solid fa-angle-right"></i></a></li>
+                  <li><a>Contact Us<i class="fa-solid fa-angle-right"></i></a></li>
+                </ul>
+              </div>
+              <a class="btn btn-ghost text-xl"><img class="w-full" src="assets/images/logo2.png" alt=""></a>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+              <ul class="menu menu-horizontal px-1 text-base text-primary-text-color">
+                <li><a>Home</a></li>
+                <li><a>Services<i class="fa-solid fa-angle-right"></i></a></li>
+                <li><a>Cases<i class="fa-solid fa-angle-right"></i></a></li>
+                <li><a>Blog<i class="fa-solid fa-angle-right"></i></a></li>
+                <li><a>Contact Us<i class="fa-solid fa-angle-right"></i></a></li>
+              </ul>
+            </div>
+            <div class="navbar-end">
+              <a class="btn bg-btn-primary-color text-white text-lg font-semibold">Free Consultation</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+      <!-- ====== nav bar end ====== -->
+    </header>
+    <!-- ====== header section end ====== -->
 </body>
 </html>
