this website responsive banner section added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 "btn-primary-color": '#B68C5A',
                 "primary-text-color": '#414040',
                 "secondary-text-color": '#707070',
+                "banner-text-color": '#E7E7E7',
               }
             }
           }
@@ -64,6 +65,23 @@
         </div>
       </nav>
       <!-- ====== nav bar end ====== -->
+      <!-- ====== banner section start ====== -->
+      <div class="container mx-auto rounded-lg">
+        <div class="hero min-h-screen" style="background-image: url(assets/images/banner.png);">
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="hero-content text-center text-neutral-content">
+            <div class="max-w-3xl">
+              <h1 class="mb-6 text-4xl md:text-7xl text-white font-bold md:font-extrabold">We Provide Effective Legal Solutions</h1>
+              <p class="mb-8 max-w-lg mx-auto text-banner-text-color text-base font-normal">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+              <div class="flex flex-col md:flex-row justify-center gap-6">
+                <input class="block outline-none border-none rounded-lg py-3 md:py-0 px-8" type="text" placeholder="Search your services">
+                <button class="btn bg-btn-primary-color text-white text-xl font-semibold outline-0 border-none">Get Started</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- ====== banner section end ====== -->
     </header>
     <!-- ====== header section end ====== -->
 </body>
