this website responsive the leag area practice section added

--- a/index.html
+++ b/index.html
@@ -84,5 +84,102 @@
       <!-- ====== banner section end ====== -->
     </header>
     <!-- ====== header section end ====== -->
+    <!-- ====== main start ====== -->
+    <main>
+      <!-- ====== the legal practice area section start ====== -->
+      <section class="p-4 mt-20">
+        <div class="container mx-auto">
+          <h1 class="text-center text-primary-text-color text-4xl font-extrabold mb-6">The Legal Practice Area</h1>
+          <p class="max-w-2xl mx-auto text-center text-secondary-text-color text-base font-normal space-y-6 mb-16">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-0">
+            <!-- ====== Business law ====== -->
+            <div class="card bg-base-100 hover:bg-slate-50 md:hover:border-r-2 md:hover:border-slate-100 rounded-none">
+              <figure class="px-10 pt-10">
+                <img src="assets/images/business.png" alt="business Law" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title text-3xl font-extrabold text-primary-text-color mb-6">Business Law</h2>
+                <p class="text-secondary-text-color text-base font-normal mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <a href=""><img src="assets/images/Frame.png" alt=""></a>
+                </div>
+              </div>
+            </div>
+            <!-- ====== Criminal Law ====== -->
+            <div class="card bg-slate-50 rounded-none">
+              <figure class="px-10 pt-10">
+                <img src="assets/images/criminal.png" alt="business Law" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title text-3xl font-extrabold text-primary-text-color mb-6">Criminal Law</h2>
+                <p class="text-secondary-text-color text-base font-normal mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <a href=""><img src="assets/images/Frame.png" alt=""></a>
+                </div>
+              </div>
+            </div>
+            <!-- ====== Child Support ====== -->
+            <div class="card bg-base-100 rounded-none hover:bg-slate-50 md:hover:border-l-2 md:hover:border-slate-100">
+              <figure class="px-10 pt-10">
+                <img src="assets/images/child.png" alt="business Law" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title text-3xl font-extrabold text-primary-text-color mb-6">Child Support</h2>
+                <p class="text-secondary-text-color text-base font-normal mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <a href=""><img src="assets/images/Frame.png" alt=""></a>
+                </div>
+              </div>
+            </div>
+            <!-- ====== Education Law ====== -->
+            <div class="card bg-base-100 rounded-none border-t-2 hover:bg-slate-50 border-slate-100">
+              <figure class="px-10 pt-10">
+                <img src="assets/images/education.png" alt="business Law" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title text-3xl font-extrabold text-primary-text-color mb-6">Education Law</h2>
+                <p class="text-secondary-text-color text-base font-normal mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <a href=""><img src="assets/images/Frame.png" alt=""></a>
+                </div>
+              </div>
+            </div>
+            <!-- ====== Divorce Law ====== -->
+            <div class="card bg-base-100 rounded-none border-l-2 border-t-2 hover:bg-slate-50 border-slate-100">
+              <figure class="px-10 pt-10">
+                <img src="assets/images/divorce.png" alt="business Law" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title text-3xl font-extrabold text-primary-text-color mb-6">Divorce Law</h2>
+                <p class="text-secondary-text-color text-base font-normal mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <a href=""><img src="assets/images/Frame.png" alt=""></a>
+                </div>
+              </div>
+            </div>
+            <!-- ====== Tax Law ====== -->
+            <div class="card bg-base-100 rounded-none border-l-2 border-t-2 hover:bg-slate-50 border-slate-100">
+              <figure class="px-10 pt-10">
+                <img src="assets/images/tax.png" alt="business Law" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title text-3xl font-extrabold text-primary-text-color mb-6">Tax Law</h2>
+                <p class="text-secondary-text-color text-base font-normal mb-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <a href=""><img src="assets/images/Frame.png" alt=""></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ====== the legal practice area section end ====== -->
+    </main>
+    <!-- ====== main end ====== -->
+    <!-- ====== footer start ====== -->
+    <footer>
+
+    </footer>
+    <!-- ====== footer end ====== -->
 </body>
 </html>
