--- a/index.html
+++ b/index.html
@@ -174,6 +174,79 @@
         </div>
       </section>
       <!-- ====== the legal practice area section end ====== -->
+      <!-- ====== what our client say section start ====== -->
+      <section class="p-4 mt-20">
+        <div class="container mx-auto rounded-lg">
+          <h1 class="text-center text-primary-text-color text-4xl font-extrabold mb-6">What Our Client Say</h1>
+          <p class="text-center max-w-2xl mx-auto text-base text-secondary-text-color font-normal space-y-6 mb-16">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <!-- ====== what our client say slider ====== -->
+          <div class="carousel w-full">
+            <!-- ====== slider-1 ====== -->
+            <div id="slide1" class="carousel-item relative w-full">
+              <!-- ====== hero-1 ====== -->
+              <div class="hero min-h-screen" style="background-image: url(assets/images/slider-1.jpg);">
+                <div class="hero-overlay bg-opacity-60"></div>
+                <div class="hero-content text-center text-neutral-content">
+                  <div class="max-w-3xl">
+                    <div class="flex justify-center mb-6">
+                      <img class="w-1/4" src="assets/images/user-1.png" alt="">
+                    </div>
+                    <h1 class="mb-2 text-4xl font-bold">Awlad Hossain</h1>
+                    <h4 class="text-2xl mb-8">UIX Designer</h4>
+                    <p class="text-banner-text-color text-base font-normal space-y-6">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide3" class="btn bg-transparent border-none text-banner-text-color hover:text-black btn-circle">❮</a> 
+                <a href="#slide2" class="btn bg-transparent border-none text-banner-text-color hover:text-black btn-circle">❯</a>
+              </div>
+            </div>
+            <!-- ====== slider-2 ====== -->
+            <div id="slide2" class="carousel-item relative w-full">
+              <!-- ====== hero-2 ====== -->
+              <div class="hero min-h-screen" style="background-image: url(assets/images/slider-2.jpg);">
+                <div class="hero-overlay bg-opacity-60"></div>
+                <div class="hero-content text-center text-neutral-content">
+                  <div class="max-w-3xl">
+                    <div class="flex justify-center mb-6">
+                      <img class="w-1/4" src="assets/images/user-2.png" alt="">
+                    </div>
+                    <h1 class="mb-2 text-4xl font-bold">Nancy L. Barker</h1>
+                    <h4 class="text-2xl mb-8">Frontend Developer</h4>
+                    <p class="text-banner-text-color text-base font-normal space-y-6">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide1" class="btn bg-transparent border-none text-banner-text-color hover:text-black btn-circle">❮</a> 
+                <a href="#slide3" class="btn bg-transparent border-none text-banner-text-color hover:text-black btn-circle">❯</a>
+              </div>
+            </div>
+            <!-- ====== slider-3 ====== -->
+            <div id="slide3" class="carousel-item relative w-full">
+              <!-- ====== hero-3 ====== -->
+              <div class="hero min-h-screen" style="background-image: url(assets/images/slider-3.jpg);">
+                <div class="hero-overlay bg-opacity-60"></div>
+                <div class="hero-content text-center text-neutral-content">
+                  <div class="max-w-3xl">
+                    <div class="flex justify-center mb-6">
+                      <img class="w-1/4" src="assets/images/user-3.png" alt="">
+                    </div>
+                    <h1 class="mb-2 text-4xl font-bold">Julia F. Pyatt</h1>
+                    <h4 class="text-2xl mb-8">Fullstack Developer</h4>
+                    <p class="text-banner-text-color text-base font-normal space-y-6">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+                <a href="#slide2" class="btn bg-transparent border-none text-banner-text-color hover:text-black btn-circle">❮</a> 
+                <a href="#slide1" class="btn bg-transparent border-none text-banner-text-color hover:text-black btn-circle">❯</a>
+              </div>
+            </div> 
+        </div>
+      </section>
+      <!-- ====== what our client say section end ====== -->
     </main>
     <!-- ====== main end ====== -->
     <!-- ====== footer start ====== -->
