this website responsive frequently asked and questions section added

--- a/index.html
+++ b/index.html
@@ -247,6 +247,63 @@
         </div>
       </section>
       <!-- ====== what our client say section end ====== -->
+      <!-- ====== frequently asked any questions section start ====== -->
+      <section class="p-4 mt-20">
+        <div class="container mx-auto">
+          <h1 class="text-center primary-text-color text-4xl mb-6 font-extrabold">Frequently Asked Any Questions</h1>
+          <p class="max-w-2xl mx-auto text-center text-secondary-text-color text-base font-normal mb-16">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <div class="flex flex-col-reverse lg:flex-row gap-8 items-center">
+            <!-- ====== frequently asked questions ====== -->
+            <div class="flex-1">
+              <!-- ====== my-accordion-1 ====== -->
+              <div class="collapse collapse-plus bg-base-200 mb-8 p-8">
+                <input type="radio" name="my-accordion-3" checked="checked" /> 
+                <div class="collapse-title text-xl font-medium">
+                  <h1 class="text-2xl text-primary-text-color font-extrabold">Are application fee waivers available?</h1>
+                </div>
+                <div class="collapse-content"> 
+                  <p class="text-base font-normal text-secondary-text-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+                </div>
+              </div>
+              <!-- ====== my-accordion-2 ====== -->
+              <div class="collapse collapse-plus bg-base-200 mb-8 p-8">
+                <input type="radio" name="my-accordion-3" /> 
+                <div class="collapse-title text-xl font-medium">
+                  <h1 class="text-2xl text-primary-text-color font-extrabold">Are application fee waivers available?</h1>
+                </div>
+                <div class="collapse-content"> 
+                  <p class="text-base font-normal text-secondary-text-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+                </div>
+              </div>
+              <!-- ====== my-accordion-3 ====== -->
+              <div class="collapse collapse-plus bg-base-200 mb-8 p-8">
+                <input type="radio" name="my-accordion-3" /> 
+                <div class="collapse-title text-xl font-medium">
+                  <h1 class="text-2xl text-primary-text-color font-extrabold">Are application fee waivers available?</h1>
+                </div>
+                <div class="collapse-content"> 
+                  <p class="text-base font-normal text-secondary-text-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+                </div>
+              </div>
+              <!-- ====== my-accordion-4 ====== -->
+              <div class="collapse collapse-plus bg-base-200 mb-8 p-8">
+                <input type="radio" name="my-accordion-4" /> 
+                <div class="collapse-title text-xl font-medium">
+                  <h1 class="text-2xl text-primary-text-color font-extrabold">Are application fee waivers available?</h1>
+                </div>
+                <div class="collapse-content"> 
+                  <p class="text-base font-normal text-secondary-text-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+                </div>
+              </div>
+            </div>
+            <!-- ====== frequently asked questions image ====== -->
+            <div class="flex-1">
+              <img class="w-full" src="assets/images/faq.png" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ====== frequently asked any questions section end ====== -->
     </main>
     <!-- ====== main end ====== -->
     <!-- ====== footer start ====== -->
