this website responsive contact with us section added

--- a/index.html
+++ b/index.html
@@ -304,6 +304,72 @@
         </div>
       </section>
       <!-- ====== frequently asked any questions section end ====== -->
+      <!-- ====== contact with us section start ====== -->
+      <section class="p-4 mt-20">
+        <div class="container mx-auto">
+          <h1 class="text-4xl text-primary-text-color font-extrabold text-center mb-6">Contact With Us</h1>
+          <p class="max-w-2xl mx-auto text-center text-base text-secondary-text-color mb-16">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <div class="flex flex-col lg:flex-row gap-8 items-center">
+            <!-- ====== contact info inner ====== -->
+            <div class="grid grid-cols-1 md:grid-cols-2 flex-1 gap-4 md:gap-0">
+              <!-- ====== address inner ====== -->
+              <div class="card bg-slate-50 rounded-none md:border-b-2 md:border-r-2 md: border-slate-200">
+                <figure class="px-10 pt-10">
+                  <img src="assets/images/location.png" alt="location" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title text-2xl text-primary-text-color font-extrabold">Address</h2>
+                  <p class="text-base secondary-text-color space-y-6 font-normal">A108 Adam Street,<br>New York, NY 535022</p>
+                </div>
+              </div>
+              <!-- ====== call us inner ====== -->
+              <div class="card bg-slate-50 rounded-none md:border-b-2 md: border-slate-200">
+                <figure class="px-10 pt-10">
+                  <img src="assets/images/call.png" alt="Call" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title text-2xl text-primary-text-color font-extrabold">Call Us</h2>
+                  <p class="text-base secondary-text-color space-y-6 font-normal">&#43;88 01750 00 00 00<br>&#43;88 01750 00 00 00</p>
+                </div>
+              </div>
+              <!-- ====== email us inner ====== -->
+              <div class="card bg-slate-50 rounded-none md:border-r-2 md: border-slate-200">
+                <figure class="px-10 pt-10">
+                  <img src="assets/images/email.png" alt="Email" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title text-2xl text-primary-text-color font-extrabold">Email Us</h2>
+                  <p class="text-base secondary-text-color space-y-6 font-normal">info@gmail.com,<br>info@gmail.com</p>
+                </div>
+              </div>
+              <!-- ====== working hours inner ====== -->
+              <div class="card bg-slate-50 rounded-none">
+                <figure class="px-10 pt-10">
+                  <img src="assets/images/time.png" alt="Time" class="rounded-xl" />
+                </figure>
+                <div class="card-body items-center text-center">
+                  <h2 class="card-title text-2xl text-primary-text-color font-extrabold">Working Hours</h2>
+                  <p class="text-base secondary-text-color space-y-6 font-normal">Mon-Fri: 9AM to 5PM<br>Sunday: 9AM to 1 PM</p>
+                </div>
+              </div>
+            </div>
+            <!-- ====== contact input inner ====== -->
+            <div class="flex-1">
+              <!-- xs -->
+              <input type="text" placeholder="Your Name" class="input w-full border-none outline-none bg-slate-50 mb-8 p-5 text-base text-secondary-text-color font-normal" />
+              <!-- sm -->
+              <input type="email" placeholder="Your Email" class="input w-full border-none outline-none bg-slate-50 mb-8 p-5 text-base text-secondary-text-color font-normal" />
+              <!-- md -->
+              <input type="text" placeholder="Subject" class="input w-full border-none outline-none bg-slate-50 mb-8 p-5 text-base text-secondary-text-color font-normal" />
+              <textarea class="block h-28 input border-none outline-none bg-slate-50 mb-8 p-5 text-base text-secondary-text-color font-normal" name="" id="" cols="85" rows="20" placeholder="Your Massage"></textarea>
+              <!-- lg -->
+              <input class="w-full bg-btn-primary-color text-white p-5 rounded-lg text-xl font-semibold" type="submit" value="Send Message">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- ====== contact with us section end ====== -->
+
     </main>
     <!-- ====== main end ====== -->
     <!-- ====== footer start ====== -->
