this website navbar button hover color change and banner hover button color change

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </ul>
             </div>
             <div class="navbar-end">
-              <a class="btn bg-btn-primary-color text-white text-lg font-semibold">Free Consultation</a>
+              <a class="btn bg-btn-primary-color text-white text-lg font-semibold hover:text-primary-text-color">Free Consultation</a>
             </div>
           </div>
         </div>
@@ -76,7 +76,7 @@
               <p class="mb-8 max-w-lg mx-auto text-banner-text-color text-base font-normal">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
               <div class="flex flex-col md:flex-row justify-center gap-6">
                 <input class="block outline-none border-none rounded-lg py-3 md:py-0 px-8" type="text" placeholder="Search your services">
-                <button class="btn bg-btn-primary-color text-white text-xl font-semibold outline-0 border-none">Get Started</button>
+                <button class="btn bg-btn-primary-color text-white text-xl font-semibold outline-0 border-none hover:text-primary-text-color">Get Started</button>
               </div>
             </div>
           </div>
