--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
     </script>
 </head>
-<body>
+<body class="bg-white">
     <!-- ====== header section start ====== -->
     <header>
       <!-- ====== nav bar start ====== -->
