this website background color change

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
                 </div>
-                <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-base text-primary-text-color">
+                <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-48 text-base text-primary-text-color">
                   <li><a>Home</a></li>
                   <li><a>Services<i class="fa-solid fa-angle-right"></i></a></li>
                   <li><a>Cases<i class="fa-solid fa-angle-right"></i></a></li>
@@ -48,7 +48,7 @@
                   <li><a>Contact Us<i class="fa-solid fa-angle-right"></i></a></li>
                 </ul>
               </div>
-              <a class="btn btn-ghost text-xl"><img class="w-full" src="assets/images/logo2.png" alt=""></a>
+              <a class="btn btn-ghost"><img class="w-full" src="assets/images/logo2.png" alt=""></a>
             </div>
             <div class="navbar-center hidden lg:flex">
               <ul class="menu menu-horizontal px-1 text-base text-primary-text-color">
@@ -94,7 +94,7 @@
           <p class="max-w-2xl mx-auto text-center text-secondary-text-color text-base font-normal space-y-6 mb-16">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-0">
             <!-- ====== Business law ====== -->
-            <div class="card bg-base-100 hover:bg-slate-50 md:hover:border-r-2 md:hover:border-slate-100 rounded-none">
+            <div class="card bg-white hover:bg-slate-50 md:hover:border-r-2 md:hover:border-slate-100 rounded-none">
               <figure class="px-10 pt-10">
                 <img src="assets/images/business.png" alt="business Law" class="rounded-xl" />
               </figure>
@@ -120,7 +120,7 @@
               </div>
             </div>
             <!-- ====== Child Support ====== -->
-            <div class="card bg-base-100 rounded-none hover:bg-slate-50 md:hover:border-l-2 md:hover:border-slate-100">
+            <div class="card bg-white rounded-none hover:bg-slate-50 md:hover:border-l-2 md:hover:border-slate-100">
               <figure class="px-10 pt-10">
                 <img src="assets/images/child.png" alt="business Law" class="rounded-xl" />
               </figure>
@@ -133,7 +133,7 @@
               </div>
             </div>
             <!-- ====== Education Law ====== -->
-            <div class="card bg-base-100 rounded-none border-t-2 hover:bg-slate-50 border-slate-100">
+            <div class="card bg-white rounded-none border-t-2 hover:bg-slate-50 border-slate-100">
               <figure class="px-10 pt-10">
                 <img src="assets/images/education.png" alt="business Law" class="rounded-xl" />
               </figure>
@@ -146,7 +146,7 @@
               </div>
             </div>
             <!-- ====== Divorce Law ====== -->
-            <div class="card bg-base-100 rounded-none border-l-2 border-t-2 hover:bg-slate-50 border-slate-100">
+            <div class="card bg-white rounded-none border-l-2 border-t-2 hover:bg-slate-50 border-slate-100">
               <figure class="px-10 pt-10">
                 <img src="assets/images/divorce.png" alt="business Law" class="rounded-xl" />
               </figure>
@@ -159,7 +159,7 @@
               </div>
             </div>
             <!-- ====== Tax Law ====== -->
-            <div class="card bg-base-100 rounded-none border-l-2 border-t-2 hover:bg-slate-50 border-slate-100">
+            <div class="card  rounded-none border-l-2 border-t-2 hover:bg-slate-50 bg-white">
               <figure class="px-10 pt-10">
                 <img src="assets/images/tax.png" alt="business Law" class="rounded-xl" />
               </figure>
@@ -257,7 +257,7 @@
             <!-- ====== frequently asked questions ====== -->
             <div class="flex-1">
               <!-- ====== my-accordion-1 ====== -->
-              <div class="collapse collapse-plus bg-base-200 mb-8 p-8">
+              <div class="collapse collapse-plus bg-slate-100 mb-8 p-8">
                 <input type="radio" name="my-accordion-3" checked="checked" /> 
                 <div class="collapse-title text-xl font-medium">
                   <h1 class="text-2xl text-primary-text-color font-extrabold">Are application fee waivers available?</h1>
@@ -267,7 +267,7 @@
                 </div>
               </div>
               <!-- ====== my-accordion-2 ====== -->
-              <div class="collapse collapse-plus bg-base-200 mb-8 p-8">
+              <div class="collapse collapse-plus bg-slate-100 mb-8 p-8">
                 <input type="radio" name="my-accordion-3" /> 
                 <div class="collapse-title text-xl font-medium">
                   <h1 class="text-2xl text-primary-text-color font-extrabold">Are application fee waivers available?</h1>
@@ -277,7 +277,7 @@
                 </div>
               </div>
               <!-- ====== my-accordion-3 ====== -->
-              <div class="collapse collapse-plus bg-base-200 mb-8 p-8">
+              <div class="collapse collapse-plus bg-slate-100 mb-8 p-8">
                 <input type="radio" name="my-accordion-3" /> 
                 <div class="collapse-title text-xl font-medium">
                   <h1 class="text-2xl text-primary-text-color font-extrabold">Are application fee waivers available?</h1>
@@ -287,7 +287,7 @@
                 </div>
               </div>
               <!-- ====== my-accordion-4 ====== -->
-              <div class="collapse collapse-plus bg-base-200 mb-8 p-8">
+              <div class="collapse collapse-plus bg-slate-100 mb-8 p-8">
                 <input type="radio" name="my-accordion-4" /> 
                 <div class="collapse-title text-xl font-medium">
                   <h1 class="text-2xl text-primary-text-color font-extrabold">Are application fee waivers available?</h1>
