--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               </div>
               <a class="btn btn-ghost"><img class="w-full" src="assets/images/logo2.png" alt=""></a>
             </div>
-            <div class="navbar-center hidden lg:flex">
+            <div class="navbar-center hidden bg-white lg:flex">
               <ul class="menu menu-horizontal px-1 text-base text-primary-text-color">
                 <li><a>Home</a></li>
                 <li><a>Services<i class="fa-solid fa-angle-right"></i></a></li>
