this website menu background change

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="container mx-auto">
           <div class="navbar">
             <div class="navbar-start">
-              <div class="dropdown">
+              <div class="dropdown bg-white">
                 <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
                 </div>
@@ -50,7 +50,7 @@
               </div>
               <a class="btn btn-ghost"><img class="w-full" src="assets/images/logo2.png" alt=""></a>
             </div>
-            <div class="navbar-center hidden bg-white lg:flex">
+            <div class="navbar-center hidden lg:flex">
               <ul class="menu menu-horizontal px-1 text-base text-primary-text-color">
                 <li><a>Home</a></li>
                 <li><a>Services<i class="fa-solid fa-angle-right"></i></a></li>
