this website responsive navbar problem solving

--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
                   <li><a>Contact Us<i class="fa-solid fa-angle-right"></i></a></li>
                 </ul>
               </div>
-              <a class="btn btn-ghost"><img class="w-full" src="assets/images/logo2.png" alt=""></a>
+              <div class="w-full">
+                <a class="btn btn-ghost"><img class="w-full" src="assets/images/logo2.png" alt="logo2"></a>
+              </div>
             </div>
-            <div class="navbar-center hidden lg:flex">
+            <div class="navbar-center hidden bg-white lg:flex">
               <ul class="menu menu-horizontal px-1 text-base text-primary-text-color">
                 <li><a>Home</a></li>
                 <li><a>Services<i class="fa-solid fa-angle-right"></i></a></li>
@@ -60,7 +62,7 @@
               </ul>
             </div>
             <div class="navbar-end">
-              <a class="btn bg-btn-primary-color text-white text-lg font-semibold hover:text-primary-text-color">Free Consultation</a>
+              <a class="btn bg-btn-primary-color text-white text-base md:text-lg font-medium md:font-semibold hover:text-primary-text-color">Free Consultation</a>
             </div>
           </div>
         </div>
