--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           <div class="navbar">
             <div class="navbar-start">
               <div class="dropdown bg-white">
-                <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <div tabindex="0" role="button" class="btn bg-white btn-ghost lg:hidden">
                   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
                 </div>
-                <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-48 text-base text-primary-text-color">
+                <ul tabindex="0" class="bg-white menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-48 text-base text-primary-text-color">
                   <li><a>Home</a></li>
                   <li><a>Services<i class="fa-solid fa-angle-right"></i></a></li>
                   <li><a>Cases<i class="fa-solid fa-angle-right"></i></a></li>
